[package]
name = "hdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = {version="11.0.0", features=["with-file-history", "with-sqlite-history"]}

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"
